[package]
name = "burn_bench"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "*" }
clap = { version = "4.5.28", features = ["derive"] }

[profile.dev.package."*"]
# In dev benchs should not take too long !
opt-level = 3

[features]
default = ["backend_ndarray", "backend_wgpu"]

# Backends
backend_ndarray = ["burn/ndarray"]
backend_wgpu = ["burn/wgpu", "burn/fusion"]
backend_tch = ["burn/tch"]

# Benchs
